[tool.poetry]
name = "kbs-script"
version = "0.1.0"
description = ""
authors = ["Julian van der Horst <julianvanderhorst@pm.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
bs4 = "^0.0.2"
setuptools = "^69.0.3"
python-dotenv = "^1.0.1"
cssutils = "^2.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
