[tool.poetry]
name = "kbs-script"
version = "0.1.0"
description = ""
authors = ["Julian van der Horst <julianvanderhorst@pm.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "2.32.0"
bs4 = "^0.0.2"
setuptools = "70.0.0"
python-dotenv = "^1.0.1"
cssutils = "^2.9.0"
selenium = "^4.27.1"
webdriver-manager = "^4.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
